Revision history for Perl extension Verilog::Language.

The contributors that suggested a given feature are shown in [].  [by ...]
indicates the contributor was also the author of the fix; Thanks!

* Verilog::Language 3.23**

****	Fix Pod::Usage dependency, rt51024.  [Andreas Koenig]

****	Fix Mac OS-X compile issues.  [Joshua Wise]

* Verilog::Language 3.231 2010/02/21

****	Support 1800-2009 /*comments*/ in define values.

****	Fix DOS carriage returns leaking into comment output.

****	Fix error on define comments w/o keep_whitespace, bug202. [Rick Ramus]

****	Fix "parser thinks ending" error on unions, bug202. [Rick Ramus]

****	Fix `defines with empty argument lists.

* Verilog::Language 3.230 2010/01/21

**	Support interface modports, bug200.  [by Thriller Wu]
	Applications using interfaces may need to ignore the new callbacks.

***	Support 1800-2009 defines with default arguments.

***	Pedantic no longer disables `__FILE__ and `__LINE__ as they
	are now part of SystemVerilog 2009 (IEEE 1800-2009).

****	Fix memory leaks.  [Thriller Wu]

* Verilog::Language 3.223 2009/12/20

***	Support `undefineall.

****	Add implied "input" to function var callbacks.

****	Fix covergroup instantiation syntax error, bug192.  [Vesselin Kavalov]

****	Fix parsing enums with implicit types.

* Verilog::Language 3.222 2009/11/24

****	Fix missing ; in ContAssign::verilog_text, bug177.  [Nicolas Wilhelm]

****	Fix multi-dimensional arrayed typedefs, bug183.  [Vesselin Kavalov]

****	Fix "assert () else" action_blocks.  [Vesselin Kavalov]

****	Fix typedef scoping under anonymous begin blocks.

****	Fix `define argument mis-replacing system task of same name, bug191.

* Verilog::Language 3.221 2009/10/28

****	Fix SystemPerl hitting "undefined find_interface..." in 3.220.

****	Fix erroring on strings with backslashed newlines, bug168. [Pete Nixon]

****	Fix compile error on RHEL3 with gettext, bug169. [Marek Rouchal]

****	Fix line number miscounting with `pragma.
