@@ -343,6 +343,54 @@ verilog/parser_bugs.v:394: PORT  'i' 'function' 'input' 'bit' '' '1'
 verilog/parser_bugs.v:394: ENDTASKFUNC  'endfunction'
 verilog/parser_bugs.v:396: MODULE  'module' 'sparam' undef '0'
 verilog/parser_bugs.v:398: ENDMODULE  'endmodule'
+verilog/parser_bugs.v:401: VAR  'port' 'sig' 'sequence' '' '' '' ''
+verilog/parser_bugs.v:401: PORT  'sig' 'sequence' 'input' '' '' '1'
+verilog/parser_bugs.v:401: VAR  'port' 'clks_before' 'sequence' '' '' '' ''
+verilog/parser_bugs.v:401: PORT  'clks_before' 'sequence' 'input' '' '' '1'
+verilog/parser_bugs.v:401: VAR  'port' 'clk' 'sequence' '' '' '' ''
+verilog/parser_bugs.v:401: PORT  'clk' 'sequence' 'input' '' '' '1'
+verilog/parser_bugs.v:401: VAR  'port' 'rst' 'sequence' '' '' '' '1'b0'
+verilog/parser_bugs.v:401: PORT  'rst' 'sequence' 'input' '' '' '1'
+verilog/parser_bugs.v:405: VAR  'port' 'sample' 'property' '' '' '' ''
+verilog/parser_bugs.v:405: PORT  'sample' 'property' 'input' '' '' '1'
+verilog/parser_bugs.v:405: VAR  'port' 'sig' 'property' '' '' '' ''
+verilog/parser_bugs.v:405: PORT  'sig' 'property' 'input' '' '' '1'
+verilog/parser_bugs.v:405: VAR  'port' 'clks_before' 'property' '' '' '' ''
+verilog/parser_bugs.v:405: PORT  'clks_before' 'property' 'input' '' '' '1'
+verilog/parser_bugs.v:405: VAR  'port' 'clks_after' 'property' '' '' '' ''
+verilog/parser_bugs.v:405: PORT  'clks_after' 'property' 'input' '' '' '1'
+verilog/parser_bugs.v:405: VAR  'port' 'clk' 'property' '' '' '' '$default_clk'
+verilog/parser_bugs.v:405: PORT  'clk' 'property' 'input' '' '' '1'
+verilog/parser_bugs.v:405: VAR  'port' 'rst' 'property' '' '' '' '1'b0'
+verilog/parser_bugs.v:405: PORT  'rst' 'property' 'input' '' '' '1'
+verilog/parser_bugs.v:411: VAR  'port' 'prop' 'property' '' '' '' ''
+verilog/parser_bugs.v:411: PORT  'prop' 'property' 'input' '' '' '1'
+verilog/parser_bugs.v:411: VAR  'port' 'clk' 'property' '' '' '' '$default_clk'
+verilog/parser_bugs.v:411: PORT  'clk' 'property' 'input' '' '' '1'
+verilog/parser_bugs.v:411: VAR  'port' 'rst' 'property' '' '' '' '1'b0'
+verilog/parser_bugs.v:411: PORT  'rst' 'property' 'input' '' '' '1'
+verilog/parser_bugs.v:415: VAR  'port' 'trig' 'property' '' '' '' ''
+verilog/parser_bugs.v:415: PORT  'trig' 'property' 'input' '' '' '1'
+verilog/parser_bugs.v:415: VAR  'port' 'n' 'property' '' '' '' ''
+verilog/parser_bugs.v:415: PORT  'n' 'property' 'input' '' '' '1'
+verilog/parser_bugs.v:415: VAR  'port' 'cond' 'property' '' '' '' ''
+verilog/parser_bugs.v:415: PORT  'cond' 'property' 'input' '' '' '1'
+verilog/parser_bugs.v:415: VAR  'port' 'clk' 'property' '' '' '' '$default_clk'
+verilog/parser_bugs.v:415: PORT  'clk' 'property' 'input' '' '' '1'
+verilog/parser_bugs.v:415: VAR  'port' 'rst' 'property' '' '' '' '1'b0'
+verilog/parser_bugs.v:415: PORT  'rst' 'property' 'input' '' '' '1'
+verilog/parser_bugs.v:421: VAR  'port' 'start_ev' 'property' '' '' '' ''
+verilog/parser_bugs.v:421: PORT  'start_ev' 'property' 'input' '' '' '1'
+verilog/parser_bugs.v:421: VAR  'port' 'start_data' 'property' '' '' '' ''
+verilog/parser_bugs.v:421: PORT  'start_data' 'property' 'input' '' '' '1'
+verilog/parser_bugs.v:421: VAR  'port' 'end_ev' 'property' '' '' '' ''
+verilog/parser_bugs.v:421: PORT  'end_ev' 'property' 'input' '' '' '1'
+verilog/parser_bugs.v:421: VAR  'port' 'end_data' 'property' '' '' '' ''
+verilog/parser_bugs.v:421: PORT  'end_data' 'property' 'input' '' '' '1'
+verilog/parser_bugs.v:421: VAR  'port' 'clk' 'property' '' '' '' '$default_clk'
+verilog/parser_bugs.v:421: PORT  'clk' 'property' 'input' '' '' '1'
+verilog/parser_bugs.v:421: VAR  'port' 'rst' 'property' '' '' '' '1'b0'
+verilog/parser_bugs.v:421: PORT  'rst' 'property' 'input' '' '' '1'
 verilog/pinorder.v:006: MODULE  'module' 'pinorder4' undef '0'
 verilog/pinorder.v:007: VAR  'net' 'b_i' 'module' 'wire' '' '' ''
 verilog/pinorder.v:008: VAR  'net' 'd_o' 'module' 'wire' '' '' ''
